--- a/app_sin_nombre/android/app/src/main/AndroidManifest.xml
+++ b/app_sin_nombre/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.app_sin_nombre">
     <application
         android:label="app_sin_nombre"
         android:name="${applicationName}"
