--- a/app_sin_nombre/pubspec.yaml
+++ b/app_sin_nombre/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.4.0
   google_fonts: ^6.2.1
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
