--- a/app_sin_nombre/pubspec.yaml
+++ b/app_sin_nombre/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   firebase_auth: ^5.6.0
   firebase_core: ^3.14.0
+  firebase_storage: ^12.0.0
   google_sign_in: ^6.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +41,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
+  file_picker: ^10.2.0
 
 dev_dependencies:
   flutter_test:
