--- a/app_sin_nombre/pubspec.yaml
+++ b/app_sin_nombre/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
   file_picker: ^10.2.0
+  image_picker: ^1.0.7
+  socket_io_client: ^2.0.0
+  url_launcher: ^6.2.6
+  flutter_rating_bar: ^4.0.0
+  flutterfire_cli: ^1.3.1
 
 dev_dependencies:
   flutter_test:
